update to last 0.12 of MyClientbase
the repo ower on bitbucket is quiting ! so update are now made by the
community.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
-/application/helpers/mpdf/
+﻿/application/helpers/mpdf/
+system/config/database.php
+*/logs/log-*.php
+*/logs/!index.html
+*/cache/*
+*/cache/!index.html
