--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ﻿/application/helpers/mpdf/
-system/config/database.php
+application/config/database.php
 */logs/log-*.php
 */logs/!index.html
 */cache/*
